2005-08-09  Crispin Flowerday  <gnome@flowerday.cx>

	* src/ephy-find-toolbar.c (ephy_find_toolbar_open): 

	When opening the find bar with Ctrl+F, search for
	the item, and select the text.

2005-08-09  Christian Persch  <chpe@cvs.gnome.org>

	* NEWS:

	Typo fixes.

	* src/ephy-tab.c: (ephy_tab_net_state_cb):

	Removed favicon fallback code.

2005-08-08  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2005-08-08  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 1.7.4 ===

	* NEWS:

2005-08-08  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmarks-editor.c:
	* src/ephy-toolbar.c: (ephy_toolbar_set_window):

	Tiny string fix just before string freeze :)

2005-08-08  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-favicon-cache.c: (ephy_favicon_cache_get):

	Disable favicons from non-http URLs.

2005-08-08  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/ContentHandler.cpp:

	Fix build with gecko trunk.

2005-08-08  Raphael Slinckx  <rslinckx@cvs.gnome.org>

	* embed/mozilla/ContentHandler.cpp:

	Change the download/open dialog strings to include the
	mime-type and file name, bits of rewording too.

2005-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-favicon-cache.c: (icons_removed_cb),
	(remove_obsolete_icons), (delete_file),
	(ephy_favicon_cache_finalize), (ephy_favicon_cache_get),
	(ephy_favicon_cache_clear):
	* embed/ephy-favicon-cache.h:

	Add way to clear the favicon cache. Also removes any extraneous files
	from favicon cache directory. Fix a crash which I wonder why we never
	experienced it!

	* src/prefs-dialog.c: (prefs_clear_cache_button_clicked_cb):

	Also clear favicon cache when clearing the cache.

2005-08-07  Crispin Flowerday  <gnome@flowerday.cx>

	* embed/mozilla/GtkNSSDialogs.cpp (ConfirmUnknownIssuer): 

	Change the text on the 'unknown issuer' dialog. 
	Fixes bug #151519

2005-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
