@@ -1,3 +1,11 @@
+2005-08-09  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/ephy-tab.c: (ephy_tab_set_property):
+	* src/ephy-tab.h:
+	* src/epiphany.defs:
+
+	Make tab icon address setter public.
+
 2005-08-09  Crispin Flowerday  <gnome@flowerday.cx>
 
 	* src/ephy-find-toolbar.c (ephy_find_toolbar_open): 
